loader overlaping nav menu bug fixed

--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -6,6 +6,9 @@
 }
 
 .pageWrapper {
+  position: relative;
+  z-index: 1;
+
   width: 100%;
   max-width: calc(100vw - 40px);
   margin-left: 20px;
